--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <a href="#">Project 1</a> - Description</li>
-            <a href="#">Project 2</a> - Description</li>
-            <a href="#">Project 3</a> - Description</li>
+            <li><a href="#">Project 1</a> - Description</li>
+            <li><a href="#">Project 2</a> - Description</li>
+            <li><a href="#">Project 3</a> - Description</li>
         </ul>
     </section>
 
