--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Georgia Tech | Engineer | Maker</p>
-    </header>
+    <div class="wrapper">
+        <header>
+            <h1>Your Name</h1>
+            <p>Georgia Tech | Engineer | Maker</p>
+        </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Brief intro about you, your work, and interests.</p>
-    </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Brief intro about you, your work, and interests.</p>
+        </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="#">Project 1</a> - Description</li>
-            <li><a href="#">Project 2</a> - Description</li>
-            <li><a href="#">Project 3</a> - Description</li>
-        </ul>
-    </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="#">Project 1</a> - Description</li>
+                <li><a href="#">Project 2</a> - Description</li>
+                <li><a href="#">Project 3</a> - Description</li>
+            </ul>
+        </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: yourname@gatech.edu</p>
-        <p>LinkedIn: <a href="#">your-linkedin</a></p>
-    </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: yourname@gatech.edu</p>
+            <p>LinkedIn: <a href="#">your-linkedin</a></p>
+        </section>
+    </div>
 </body>
 </html>
