--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Adnan Mir - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>Your Name</h1>
+            <h1>Adnan Mir</h1>
             <p>Georgia Tech | Engineer | Maker</p>
         </header>
 
@@ -29,8 +29,7 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: yourname@gatech.edu</p>
-            <p>LinkedIn: <a href="#">your-linkedin</a></p>
+            <p>LinkedIn: <a href="#">linkedin.com/in/mir-adnan/</a></p>
         </section>
     </div>
 </body>
