--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>LinkedIn: <a href="#">linkedin.com/in/mir-adnan/</a></p>
+            <p><a href="linkedin.com/in/mir-adnan/">LinkedIn</a></p>
         </section>
     </div>
 </body>
