--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p><a href="linkedin.com/in/mir-adnan/">LinkedIn</a></p>
+                <p><a href="mailto:adnanmir280@gmail.com">Email</a></p>
+                <p><a href="https://www.linkedin.com/in/mir-adnan/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
         </section>
     </div>
 </body>
